--- a/state_notifier_patterns/statenotifier_provider/pubspec.yaml
+++ b/state_notifier_patterns/statenotifier_provider/pubspec.yaml
@@ -14,12 +14,25 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  equatable: ^2.0.3
+  # localization helper
+  intl: ^0.17.0
+  # localization automation
+  intl_utils: ^2.4.0
+  state_notifier: ^0.7.2+1
+  flutter_state_notifier: ^0.7.1
+  provider: ^6.0.3
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  dart_code_metrics: ^4.15.2
+  build_runner: ^2.1.11
+  lint: ^1.8.2
+  mocktail: ^0.2.0
 
-  flutter_lints: ^2.0.0
+
 
 flutter:
   uses-material-design: true
@@ -30,3 +43,12 @@ flutter:
   assets:
     # Add assets from the images directory to the application.
     - assets/images/
+# flutter intl for localization settings
+flutter_intl:
+  enabled: true   
+  class_name: S   
+  main_locale: en 
+  arb_dir: lib/src/localization
+  output_dir: lib/src/localization_gen
+  use_deferred_loading: false
+
